[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Chicken.gd" type="Script" id=1]
[ext_resource path="res://assets/chicken.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/cluck.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

[node name="Chicken" type="Area2D"]
position = Vector2( 430.496, 229.094 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 2 )

[node name="CluckSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Chicken_body_entered"]
[connection signal="finished" from="CluckSound" to="." method="_on_CluckSound_finished"]
